Метод .of [#70623]